solve and finish block techniques, add routes for links and remove no-right-margin modifiers using gap instead

--- a/blocks/cards/__item/cards__item.css
+++ b/blocks/cards/__item/cards__item.css
@@ -1,6 +1,3 @@
 .cards__item {
   width: 240px;
-  margin: 60px 100px 0 0;
-  display: inline-block;
-
 }
