--- a/blocks/cards/cards.css
+++ b/blocks/cards/cards.css
@@ -1,5 +1,9 @@
 .cards {
   width: 920px;
   margin: 0 auto;
+  padding-top: 60px;
   font-size: 0;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 60px 100px;
 }
