--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -14,5 +14,5 @@
 }
 
 .feynman__link:hover {
-  opacity: 0.7;
+  opacity: 0.6;
 }
