--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -2,6 +2,7 @@
   padding-left: 48px;
   line-height: 42px;
   font-size: 30px;
+  color: #2f80ed;
   font-weight: normal;
   text-decoration: none;
   opacity: 1;
@@ -9,5 +10,5 @@
 }
 
 .khan__buy-link:hover {
-  opacity: 0.7;
+  opacity: 0.6;
 }
