--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,3 +1,5 @@
 .video__iframes {
   padding: 50px 0 0;
+  display: flex;
+  column-gap: 20px;
 }
